--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -11,68 +11,17 @@
       <a
         class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}"
         href="{{ site.baseurl }}"
-        >Intro</a
+        >Introduction</a
       >
 
-      {% comment %} The code below dynamically generates a sidebar nav of pages
-      with `layout: page` in the front-matter. See readme for usage. {%
-      endcomment %} {% assign pages_list = site.pages %} {% for node in
-      pages_list %} {% if node.title != null %} {% if node.layout == "page" %}
+      {% assign pages_list = site.pages %} {% for node in pages_list %} {% if
+      node.title != null %} {% if node.layout == "page" %}
       <a
         class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
         href="{{ node.url }}"
         >{{ node.title }}</a
       >
       {% endif %} {% endif %} {% endfor %}
-
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/archive/v{{ site.version }}.zip"
-        >Download</a
-      >
-
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/archive/v{{ site.version }}.zip"
-        >Download</a
-      >
-
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/archive/v{{ site.version }}.zip"
-        >Download</a
-      >
-
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/archive/v{{ site.version }}.zip"
-        >Download</a
-      >
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/archive/v{{ site.version }}.zip"
-        >Download</a
-      >
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/archive/v{{ site.version }}.zip"
-        >Download</a
-      >
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/archive/v{{ site.version }}.zip"
-        >Download</a
-      >
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/archive/v{{ site.version }}.zip"
-        >Download</a
-      >
-      <a
-        class="sidebar-nav-item"
-        href="{{ site.github.repo }}/archive/v{{ site.version }}.zip"
-        >Download</a
-      >
 
       <a class="sidebar-nav-item" href="{{ site.github_repo }}">GitHub</a>
     </nav>
