--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -24,7 +24,9 @@
       </a>
       {% endif %} {% endif %} {% endif %} {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github_repo }}">GitHub</a>
+      <a class="sidebar-nav-item" href="{{ site.github_repo }}"
+        ><i>Source code on GitHub</i></a
+      >
     </nav>
   </div>
 </div>
