[docs] Add more placeholders for libs

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -21,7 +21,7 @@
         class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
         href="{{ node.url }}"
         >{{ node.title
-        }}<small class="sidebar-item-tagline"> {{ node.tagline }}</small>
+        }}<small class="sidebar-item-tagline">&nbsp;{{ node.tagline }}</small>
       </a>
       {% endif %} {% endif %} {% endif %} {% endfor %}
 
