--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -4,5 +4,6 @@ layout: default
 
 <div class="page">
   <h1 class="page-title">{{ page.title }}</h1>
+  <h4 class="page-tagline">{{ page.tagline }}</h4>
   {{ content }}
 </div>
