[docs] Blockqqutes css and update nuklear

--- a/docs/public/css/poole.css
+++ b/docs/public/css/poole.css
@@ -228,8 +228,11 @@ blockquote p:last-child {
 }
 @media (min-width: 30em) {
   blockquote {
-    padding-right: 5rem;
-    padding-left: 1.25rem;
+    padding-left: 1em;
+    color: #ddd;
+    position: absolute;
+    left: 1rem;
+    width: 14rem;
   }
 }
 
