--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -10,15 +10,17 @@
   />
 
   <title>
-    {% if page.title == "Home" %} {{ site.title }} &middot;
-    {{ site.tagline }} {% else %} {{ page.title }} &middot; {{ site.title }} {%
-    endif %}
+    {% if page.tagline %} {{ site.title }} &middot; {{ site.tagline }} {% else
+    %} {{ page.title }} &middot; {{ site.title }} {% endif %}
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css" />
-  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css" />
-  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/hyde.css" />
+  <link rel="stylesheet" href="{{ site.baseurl.chomp }}/public/css/poole.css" />
+  <link
+    rel="stylesheet"
+    href="{{ site.baseurl.chomp }}/public/css/syntax.css"
+  />
+  <link rel="stylesheet" href="{{ site.baseurl.chomp }}/public/css/hyde.css" />
   <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"
@@ -28,15 +30,18 @@
   <link
     rel="apple-touch-icon-precomposed"
     sizes="144x144"
-    href="{{ site.baseurl }}/public/apple-touch-icon-144-precomposed.png"
+    href="{{ site.baseurl.chomp }}/public/apple-touch-icon-144-precomposed.png"
   />
-  <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico" />
+  <link
+    rel="shortcut icon"
+    href="{{ site.baseurl.chomp }}/public/favicon.ico"
+  />
 
   <!-- RSS -->
   <link
     rel="alternate"
     type="application/rss+xml"
     title="RSS"
-    href="{{ site.baseurl }}/atom.xml"
+    href="{{ site.baseurl.chomp }}/atom.xml"
   />
 </head>
