--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container" style="padding: 0">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}"> {{ site.title }} </a>
+        <a href="{{ site.baseurl.chomp }}/"> {{ site.title }} </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
@@ -10,17 +10,22 @@
     <nav class="sidebar-nav">
       <a
         class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}"
-        href="{{ site.baseurl }}"
+        href="{{ site.baseurl.chomp }}"
         >Home</a
       >
 
       {% assign pages_list = site.pages %} {% for node in pages_list %} {% if
       node.title != null %} {% if node.layout == "page" %} {% if node.url !=
-      site.baseurl and node.url != "/" %}
+      site.baseurl and node.url != "/" and node.tagline %}
       <a
-        class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
-        href="{{ site.baseurl }}{{ node.url }}"
-        ><div class="sidebar-nav-wrapper">{{ node.title }}</div>
+        class="sidebar-nav-item{% if page.url == node.url %} active{% endif %} {% if node.empty %} empty{% endif %}"
+        href="{{ site.baseurl.chomp }}{{ node.url }}"
+        ><div class="sidebar-nav-wrapper">
+          {{ node.title }} {{ site.baseurl.chomp }}{{ node.url }}
+          <li>{{ site.baseurl }}</li>
+          <li>{{ site.baseurl.chomp }}</li>
+          <li>{{ node.url }}</li>
+        </div>
       </a>
       {% endif %} {% endif %} {% endif %} {% endfor %}
 
