--- a/docs/public/css/hyde.css
+++ b/docs/public/css/hyde.css
@@ -90,6 +90,10 @@ html {
   justify-content: center;
 }
 
+.empty {
+  opacity: 0.6;
+}
+
 @media (min-width: 600px) {
   .index-item {
     width: 20%;
