[docs] debug jekyll

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -15,12 +15,12 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl.chomp }}/public/css/poole.css" />
+  <link rel="stylesheet" href="{{ site.baseurl.chop! }}/public/css/poole.css" />
   <link
     rel="stylesheet"
-    href="{{ site.baseurl.chomp }}/public/css/syntax.css"
+    href="{{ site.baseurl.chop! }}/public/css/syntax.css"
   />
-  <link rel="stylesheet" href="{{ site.baseurl.chomp }}/public/css/hyde.css" />
+  <link rel="stylesheet" href="{{ site.baseurl.chop! }}/public/css/hyde.css" />
   <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"
@@ -30,11 +30,11 @@
   <link
     rel="apple-touch-icon-precomposed"
     sizes="144x144"
-    href="{{ site.baseurl.chomp }}/public/apple-touch-icon-144-precomposed.png"
+    href="{{ site.baseurl.chop! }}/public/apple-touch-icon-144-precomposed.png"
   />
   <link
     rel="shortcut icon"
-    href="{{ site.baseurl.chomp }}/public/favicon.ico"
+    href="{{ site.baseurl.chop! }}/public/favicon.ico"
   />
 
   <!-- RSS -->
@@ -42,6 +42,6 @@
     rel="alternate"
     type="application/rss+xml"
     title="RSS"
-    href="{{ site.baseurl.chomp }}/atom.xml"
+    href="{{ site.baseurl.chop! }}/atom.xml"
   />
 </head>
