[docs] update baseurl

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -15,12 +15,9 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl.chop! }}/public/css/poole.css" />
-  <link
-    rel="stylesheet"
-    href="{{ site.baseurl.chop! }}/public/css/syntax.css"
-  />
-  <link rel="stylesheet" href="{{ site.baseurl.chop! }}/public/css/hyde.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/hyde.css" />
   <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"
@@ -30,18 +27,15 @@
   <link
     rel="apple-touch-icon-precomposed"
     sizes="144x144"
-    href="{{ site.baseurl.chop! }}/public/apple-touch-icon-144-precomposed.png"
+    href="{{ site.baseurl }}/public/apple-touch-icon-144-precomposed.png"
   />
-  <link
-    rel="shortcut icon"
-    href="{{ site.baseurl.chop! }}/public/favicon.ico"
-  />
+  <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico" />
 
   <!-- RSS -->
   <link
     rel="alternate"
     type="application/rss+xml"
     title="RSS"
-    href="{{ site.baseurl.chop! }}/atom.xml"
+    href="{{ site.baseurl }}/atom.xml"
   />
 </head>
