[docs] update links

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -14,7 +14,7 @@
         >Home</a
       >
 
-      <a class="sidebar-nav-item{% if page.url == '/motivation' %} active{% endif %}" href="{{ site.github_repo }}"
+      <a class="sidebar-nav-item{% if page.url == '/motivation' %} active{% endif %}" href="{{ site.baseurl }}/motivation"
         >Motivation</a
       >
 
