--- a/appkit/AppKitChat/Base.lproj/MainMenu.xib
+++ b/appkit/AppKitChat/Base.lproj/MainMenu.xib
@@ -14,6 +14,7 @@
         <customObject id="-3" userLabel="Application"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="AppKitChat" customModuleProvider="target">
             <connections>
+                <outlet property="outlineView" destination="Fhi-Sn-aIo" id="0uf-LN-WrP"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
@@ -711,7 +712,7 @@
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                     </tableHeaderCell>
-                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="Ydr-1F-yXt">
+                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Channels" id="Ydr-1F-yXt">
                                                         <font key="font" metaFont="system"/>
                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -880,7 +881,7 @@
                         <textField key="view" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="KLz-ez-VrT">
                             <rect key="frame" x="20" y="14" width="37" height="17"/>
                             <autoresizingMask key="autoresizingMask"/>
-                            <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="b72-qQ-4sj">
+                            <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" id="b72-qQ-4sj">
                                 <font key="font" usesAppearanceFont="YES"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
